--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             <div class="friday">FRI</div>
             <div class="saturday">SAT</div>
             <div class="sunday">SUN</div>
-            <div class="monday"></div>
-            <div class="tuesday"></div>
-            <div class="wednesday"></div>
-            <div class="thursday"></div>
-            <div class="friday"></div>
-            <div class="saturday"></div>
-            <div class="sunday"></div>
+            <div class="weather-icon"></div>
+            <div class="weather-icon"></div>
+            <div class="weather-icon"></div>
+            <div class="weather-icon"></div>
+            <div class="weather-icon"></div>
+            <div class="weather-icon"></div>
+            <div class="weather-icon"></div>
             <div class="temp">5 &#176;</div>
             <div class="temp">6 &#176;</div>
             <div class="temp">7 &#176;</div>
