--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .main{
+        .weather-parameters{
             border: 1px solid black;
             width: 90%;
             height: auto;
@@ -18,7 +18,7 @@
             align-items: center;
             text-align: center;
         }
-        .main div {
+        .weather-parameters div {
             border: 1px solid red;
             height: auto;
         }
@@ -69,7 +69,7 @@
             grid-column: 4;
             grid-row: 3;
         }
-        #twelth {
+        #twelve {
             grid-column: 4;
             grid-row: 4;
         }
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <div class="weather-parameters">
         <div id="one">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
             class="bi bi-moisture" viewBox="0 0 16 16">
@@ -118,7 +118,7 @@
         </svg>
         </div>
         <div id="eleven">Sunrise</div>
-        <div id="twelth">6:35 am</div>
+        <div id="twelve">6:35 am</div>
     </div>
 </body>
 
