--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="main-container">
         <header>
             <h1>Weather</h1>
-            <input type="text" name="search" value="Search">
+            <input class="search" type="text" name="search" value="Search">
         </header>
         <div class="main-table">
             <div>
