--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="main-container">
         <header>
             <h1>Weather</h1>
-            <input class="search" type="text" name="search" value="Search" onclick="search()">
+            <input class="inputData" type="text" name="search" value="Search" onclick="search()">
         </header>
         <div class="main-table">
             <div class="todayWeather">
@@ -31,7 +31,9 @@
             </div>
             <div>
                 <div class="sunset-time">7.00 PM</div>
-                <div class="sunset">Sunset time,<span id="today-day"></span></div>
+                <div class="sunset">Sunset time,
+                    <span id="today-day"></span>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -123,7 +125,7 @@
 
 
         <script src="script.js"></script>
-       
+
 </body>
 
 </html>
