--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="main-container">
         <header>
             <h1>Weather</h1>
-            <input class="inputData" type="text" name="search" value="Search" onclick="inputSearch()">
+            <input class="inputData" type="text" name="search" value="Paris" onclick="inputSearch()">
         </header>
         <div class="main-table">
             <div class="todayWeather">
