--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
                 <div id="five">Sunset</div>
                 <div id="six">7:50 pm</div>
                 <div id="seven">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wind" viewBox="0 0 16 16">
-                        <path d="M12.5 2A2.5 2.5 0 0 0 10 4.5a.5.5 0 0 1-1 0A3.5 3.5 0 1 1 12.5 8H.5a.5.5 0 0 1 0-1h12a2.5 2.5 0 0 0 0-5zm-7 1a1 1 0 0 0-1 1 .5.5 0 0 1-1 0 2 2 0 1 1 2 2h-5a.5.5 0 0 1 0-1h5a1 1 0 0 0 0-2zM0 9.5A.5.5 0 0 1 .5 9h10.042a3 3 0 1 1-3 3 .5.5 0 0 1 1 0 2 2 0 1 0 2-2H.5a.5.5 0 0 1-.5-.5z"/>
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-wind" viewBox="0 0 16 16">
+                        <path
+                            d="M12.5 2A2.5 2.5 0 0 0 10 4.5a.5.5 0 0 1-1 0A3.5 3.5 0 1 1 12.5 8H.5a.5.5 0 0 1 0-1h12a2.5 2.5 0 0 0 0-5zm-7 1a1 1 0 0 0-1 1 .5.5 0 0 1-1 0 2 2 0 1 1 2 2h-5a.5.5 0 0 1 0-1h5a1 1 0 0 0 0-2zM0 9.5A.5.5 0 0 1 .5 9h10.042a3 3 0 1 1-3 3 .5.5 0 0 1 1 0 2 2 0 1 0 2-2H.5a.5.5 0 0 1-.5-.5z" />
+                    </svg>
                 </div>
                 <div id="line"></div>
                 <div id="eight">Wind</div>
@@ -75,59 +77,52 @@
             <div class="max-min-temperature">
                 <div id="max-temp-title">Max temperature</div>
                 <div id="min-temp-title">Min temperature</div>
-                <svg id="max-temp-icon" xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-thermometer-high" viewBox="0 0 16 16">
-                    <path d="M9.5 12.5a1.5 1.5 0 1 1-2-1.415V2.5a.5.5 0 0 1 1 0v8.585a1.5 1.5 0 0 1 1 1.415z"/>
-                    <path d="M5.5 2.5a2.5 2.5 0 0 1 5 0v7.55a3.5 3.5 0 1 1-5 0V2.5zM8 1a1.5 1.5 0 0 0-1.5 1.5v7.987l-.167.15a2.5 2.5 0 1 0 3.333 0l-.166-.15V2.5A1.5 1.5 0 0 0 8 1z"/>
-                  </svg>
-                <svg id="min-temp-icon" xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-thermometer-low" viewBox="0 0 16 16">
-                    <path d="M9.5 12.5a1.5 1.5 0 1 1-2-1.415V9.5a.5.5 0 0 1 1 0v1.585a1.5 1.5 0 0 1 1 1.415z"/>
-                    <path d="M5.5 2.5a2.5 2.5 0 0 1 5 0v7.55a3.5 3.5 0 1 1-5 0V2.5zM8 1a1.5 1.5 0 0 0-1.5 1.5v7.987l-.167.15a2.5 2.5 0 1 0 3.333 0l-.166-.15V2.5A1.5 1.5 0 0 0 8 1z"/>
-                  </svg>
+                <svg id="max-temp-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                    class="bi bi-thermometer-high" viewBox="0 0 16 16">
+                    <path d="M9.5 12.5a1.5 1.5 0 1 1-2-1.415V2.5a.5.5 0 0 1 1 0v8.585a1.5 1.5 0 0 1 1 1.415z" />
+                    <path
+                        d="M5.5 2.5a2.5 2.5 0 0 1 5 0v7.55a3.5 3.5 0 1 1-5 0V2.5zM8 1a1.5 1.5 0 0 0-1.5 1.5v7.987l-.167.15a2.5 2.5 0 1 0 3.333 0l-.166-.15V2.5A1.5 1.5 0 0 0 8 1z" />
+                </svg>
+                <svg id="min-temp-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                    class="bi bi-thermometer-low" viewBox="0 0 16 16">
+                    <path d="M9.5 12.5a1.5 1.5 0 1 1-2-1.415V9.5a.5.5 0 0 1 1 0v1.585a1.5 1.5 0 0 1 1 1.415z" />
+                    <path
+                        d="M5.5 2.5a2.5 2.5 0 0 1 5 0v7.55a3.5 3.5 0 1 1-5 0V2.5zM8 1a1.5 1.5 0 0 0-1.5 1.5v7.987l-.167.15a2.5 2.5 0 1 0 3.333 0l-.166-.15V2.5A1.5 1.5 0 0 0 8 1z" />
+                </svg>
                 <div id="max-temp-data">45mm</div>
                 <div id="min-temp-data">+17%</div>
             </div>
 
-            <div class="weather-of-week">
-                <div class="monday">MON</div>
-                <div class="tuesday">TUE</div>
-                <div class="wednesday">WED</div>
-                <div class="thursday">THU</div>
-                <div class="friday">FRI</div>
-                <div class="saturday">SAT</div>
-                <div class="sunday">SUN</div>
-                <div class="weather-icon">
-                    <img src="cloud-drizzle.svg">
+            <div class="forecast-container">
+                <div class="day-forecast">
+                    <div>Week Day</div>
+                    <div>Icon</div>
+                    <div>temperature</div>
                 </div>
-                <div class="weather-icon">
-                    <img src="cloud-fill.svg">
+                <div class="day-forecast">
+                    <div>Week Day</div>
+                    <div>Icon</div>
+                    <div>temperature</div>
                 </div>
-                <div class="weather-icon">
-                    <img src="sun.svg">
+                <div class="day-forecast">
+                    <div>Week Day</div>
+                    <div>Icon</div>
+                    <div>temperature</div>
                 </div>
-                <div class="weather-icon">
-                    <img src="snow.svg">
+                <div class="day-forecast">
+                    <div>Week Day</div>
+                    <div>Icon</div>
+                    <div>temperature</div>
                 </div>
-                <div class="weather-icon">
-                    <img src="wind.svg">
+                <div class="day-forecast">
+                    <div>Week Day</div>
+                    <div>Icon</div>
+                    <div>temperature</div>
                 </div>
-                <div class="weather-icon">
-                    <img src="cloud-lightning-rain.svg">
-                </div>
-                <div class="weather-icon">
-                    <img src="cloud-sun.svg">
-                </div>
-                <div class="temp">5 &#176;</div>
-                <div class="temp">6 &#176;</div>
-                <div class="temp">7 &#176;</div>
-                <div class="temp">8 &#176;</div>
-                <div class="temp">9 &#176;</div>
-                <div class="temp">10 &#176;</div>
-                <div class="temp">11 &#176;</div>
             </div>
-        </div>
 
 
-        <script src="script.js"></script>
+            <script src="script.js"></script>
 
 </body>
 
