--- a/test.html
+++ b/test.html
@@ -57,6 +57,13 @@
             let response = await fetch(`https://api.openweathermap.org/data/2.5/forecast?q=Paris&appid=${apikey}&units=metric`);
             let data = await response.json();
             console.log(data);
+            let dataArray = [];
+            for(i=0; i < dataArray.length; i++){
+               let dates = dataArray.push(data.list[i].dt_txt);
+                return dataArray;
+                console.log(dates)
+            }
+            //console.log(data.list[0].dt_txt)
         }
         findWeatherData()
 
@@ -74,14 +81,16 @@
 
         const DAY_MILSEC = 24 * 60 * 60 * 1000;
         let today = new Date().getTime();
-        //console.log(today)
         for (let i = 0; i < 5; i++) {
             let date = new Date(today + DAY_MILSEC * i);
             console.log(getDay(date));
         }
-
         function getDay(date) {
-            return date.getDate() + " " + weekday[date.getDay()];
+            const weekday = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+            const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+            let todayMonth = months[new Date().getMonth()]
+            let nextDays = `${todayMonth} ${date.getDate()}, ${weekday[date.getDay()]}`;
+            return nextDays
         }
 
     </script>
