resize styles added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="main-container">
+    
         <header>
             <h1>Weather</h1>
             <input class="inputData" type="text" name="search" value="Paris" onclick="inputSearch()">
@@ -123,6 +123,7 @@
 
 
             <script src="script.js"></script>
+        </div>
 
 </body>
 
