--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
                 <div class="todayTemperature">13 &#176;</div>
                 <div class="location">Telluride, CO, USA</div>
             </div>
-            <div>
-                <div class="sunset-time">7.00 PM</div>
-                <div class="sunset">Sunset time,
-                    <span id="today-day"></span>
-                </div>
+            <div class="today-date-and-sunset-time">
+                <div id="today-day"></div>
+                <div class="sunset-time">7.00 PM <br> Sunset time </div>
             </div>
         </div>
         <div class="container">
