--- a/test.html
+++ b/test.html
@@ -10,14 +10,14 @@
         .inputSearchList {
             display: none;
             width: 200px;
-            height: 50px;
+            height: auto;
             border: solid 1px black
         }
     </style>
 </head>
 
 <body>
-    <input class="inputData" list="searchList" onclick="showLastSearches()">
+    <input class="inputData" onclick="showLastSearches()">
     <div class="inputSearchList"></div>
 
     <script>
@@ -26,21 +26,24 @@
             const inputField = document.querySelector(".inputData");
             if (!inputDiv.contains(event.target) && !inputField.contains(event.target)) {
                 inputDiv.replaceChildren();
+                inputDiv.style.display = "none";
             }
-
         })
+
         function showLastSearches() {
             let lastSearches = JSON.parse(localStorage.getItem('storageArray'));
             let inputDiv = document.querySelector(".inputSearchList");
             let list = document.createElement('ul');
             inputDiv.replaceChildren(list);
-            for(let i=0; i < lastSearches.length; i++){
+            for (let i = 0; i < lastSearches.length; i++) {
                 let li = document.createElement('li');
                 list.appendChild(li);
                 li.textContent = `${lastSearches[i]}`;
             };
             inputDiv.style.display = "block";
+            changeColorOfSearchesList();
         }
+
 
         function inputSearch() {
             let list = document.querySelector(".inputSearchList");
@@ -53,16 +56,43 @@
             if (stored === null) {
                 lastSearches = []
             } else {
-                lastSearches = JSON.parse(stored)
+                lastSearches = JSON.parse(stored);
             }
             if (lastSearches.length >= 10) {
                 lastSearches.shift();
             }
             lastSearches.push(document.querySelector(".inputData").value);
             localStorage.setItem('storageArray', JSON.stringify(lastSearches));
-           console.log(localStorage.getItem('storageArray'))
-            console.log(lastSearches);           
+            //console.log(localStorage.getItem('storageArray'))
+            //console.log(lastSearches);           
+        }
+
+        function bindEnterKey() {
+            document.querySelector(".inputData").addEventListener('keydown', function (enter) {
+                if (enter.key === "Enter") {
+                    inputSearch();
+                }
+            });
+        };
+        bindEnterKey();
+
+        function changeColorOfSearchesList() {
+            let listOfSearches = document.getElementsByTagName('li');
+            let arrayOfSearches = Array.from(listOfSearches);
+            console.log(arrayOfSearches);
+            for (i = 0; i < arrayOfSearches.length; i++) {
+                arrayOfSearches[i].onmouseover = arrayOfSearches[i].onmouseout = handler;
+                function handler(event) {
+                    if (event.type == "mouseover") {
+                        event.target.style.background = "grey";
+                    }
+                    if (event.type == "mouseout") {
+                        event.target.style.background = "white";
+                    }
+                }
             }
+        }
+
 
 
     </script>
