--- a/test.html
+++ b/test.html
@@ -85,6 +85,7 @@
                 function handler(event) {
                     if (event.type == "mouseover") {
                         event.target.style.background = "grey";
+                        event.target.style.backroundImage = "URL('cross-svgrepo-com.svg')"
                     }
                     if (event.type == "mouseout") {
                         event.target.style.background = "white";
