new js file creation

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
 
             <script src="script.js"></script>
+            <script src="input-search.js"></script>
         </div>
 
 </body>
