--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
             <script src="script.js"></script>
             <script src="input-search.js"></script>
+            <script src="change-size-style.js"></script>
         </div>
 
 </body>
