--- a/test.html
+++ b/test.html
@@ -14,11 +14,12 @@
             border: solid 1px black
         }
 
-        .list-container{
+        .list-container {
             display: flex;
             flex-direction: column;
         }
-        .last-searches-container {
+
+        .previous-search-container {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -26,13 +27,14 @@
             padding: 3px;
         }
 
-        .cross {
+        .delete-search {
             text-align: right;
             font-size: 15px;
             color: black;
             font-weight: bold;
-        }
+            display: none;
 
+        }
     </style>
 </head>
 
@@ -57,32 +59,44 @@
             list.className = "list-container";
             inputDiv.replaceChildren(list);
             for (let i = 0; i < lastSearches.length; i++) {
-                let li = document.createElement('div');
-                li.className = "last-searches-container";
-                let lastinput = list.appendChild(li);
-                lastinput.textContent = `${lastSearches[i]}`;
+                let previousSearchContainer = list.appendChild(document.createElement('div'));
+                previousSearchContainer.className = "previous-search-container";
+                let searchText = previousSearchContainer.appendChild(document.createElement('div'));
+                searchText.textContent = `${lastSearches[i]}`;
+                searchText.addEventListener('click', function () {
+                    document.querySelector(".inputData").value = event.target.textContent;
+                    list.style.display = "none";
+                })
+                previousSearchContainer.addEventListener('click', function () {
+                    document.querySelector(".inputData").value = searchText.textContent;
+                    list.style.display = "none";
+                })
                 //создание div с крестиком
-                let x = document.createElement('div');
-                x.className = "cross"
-                x.textContent = 'x'
-                li.appendChild(x);
+                let deleteSearch = previousSearchContainer.appendChild(document.createElement('div'));
+                deleteSearch.className = "delete-search";
+                deleteSearch.textContent = 'x';
             };
             inputDiv.style.display = "block";
             changeColorOfSearchesList();
-
-            //сделать отдельной функцией
-            let arrayOfInputValues = Array.from(list.children);
-            for (let i = 0; i < arrayOfInputValues.length; i++) {
-                arrayOfInputValues[i].addEventListener('click', function () {
-                    document.querySelector(".inputData").value = event.target.textContent;
-                    
-                    list.style.display = "none";
-                })
-            }
         }
 
-        function createCrossInDiv() {
 
+        function changeColorOfSearchesList() {
+            let listOfSearches = document.getElementsByClassName('list-container');
+            let arrayOfSearches = Array.from(listOfSearches);
+            console.log(arrayOfSearches)
+            for (i = 0; i < arrayOfSearches.length; i++) {
+                arrayOfSearches[i].onmouseover = arrayOfSearches[i].onmouseout = handler;
+                function handler(event) {
+                    if (event.type == "mouseover") {
+                        event.target.style.background = "grey";
+                        document.querySelector(".delete-search").style.display = "block";
+                    }
+                    if (event.type == "mouseout") {
+                        event.target.style.background = "white";
+                    }
+                }
+            }
         }
 
         function inputSearch() {
