--- a/test.html
+++ b/test.html
@@ -62,42 +62,46 @@
                 let previousSearchContainer = list.appendChild(document.createElement('div'));
                 previousSearchContainer.className = "previous-search-container";
                 let searchText = previousSearchContainer.appendChild(document.createElement('div'));
+                searchText.className = "search-text";
                 searchText.textContent = `${lastSearches[i]}`;
                 searchText.addEventListener('click', function () {
                     document.querySelector(".inputData").value = event.target.textContent;
                     list.style.display = "none";
                 })
-                previousSearchContainer.addEventListener('click', function () {
-                    document.querySelector(".inputData").value = searchText.textContent;
-                    list.style.display = "none";
+                previousSearchContainer.addEventListener('click', function (event) {
+                    if (!event.target.contains('delete-search')) {
+                        document.querySelector(".inputData").value = searchText.textContent;
+                        list.style.display = "none";
+                    }
                 })
                 //создание div с крестиком
                 let deleteSearch = previousSearchContainer.appendChild(document.createElement('div'));
                 deleteSearch.className = "delete-search";
                 deleteSearch.textContent = 'x';
-            };
-            inputDiv.style.display = "block";
-            changeColorOfSearchesList();
-        }
-
-
-        function changeColorOfSearchesList() {
-            let listOfSearches = document.getElementsByClassName('list-container');
-            let arrayOfSearches = Array.from(listOfSearches);
-            console.log(arrayOfSearches)
-            for (i = 0; i < arrayOfSearches.length; i++) {
-                arrayOfSearches[i].onmouseover = arrayOfSearches[i].onmouseout = handler;
+                previousSearchContainer.onmouseover = previousSearchContainer.onmouseout = handler;
                 function handler(event) {
                     if (event.type == "mouseover") {
                         event.target.style.background = "grey";
-                        document.querySelector(".delete-search").style.display = "block";
+                        deleteSearch.style.display = "block";
                     }
                     if (event.type == "mouseout") {
                         event.target.style.background = "white";
+                        deleteSearch.style.display = "none";
                     }
                 }
-            }
+
+                deleteSearch.addEventListener('click', function () {
+                    previousSearchContainer.remove();
+                    lastSearches.splice(i, 1);
+                    localStorage.setItem('storageArray', JSON.stringify(lastSearches));
+                })
+            };
+
+
+            inputDiv.style.display = "block";
+
         }
+
 
         function inputSearch() {
             let list = document.querySelector(".inputSearchList");
@@ -129,22 +133,7 @@
         };
         bindEnterKey();
 
-        function changeColorOfSearchesList() {
-            let listOfSearches = document.getElementsByTagName('div');
-            let arrayOfSearches = Array.from(listOfSearches);
-            for (i = 0; i < arrayOfSearches.length; i++) {
-                arrayOfSearches[i].onmouseover = arrayOfSearches[i].onmouseout = handler;
-                function handler(event) {
-                    if (event.type == "mouseover") {
-                        event.target.style.background = "grey";
-                        document.querySelector(".cross").style.display = "block";
-                    }
-                    if (event.type == "mouseout") {
-                        event.target.style.background = "white";
-                    }
-                }
-            }
-        }
+
 
     </script>
 </body>
