--- a/test.html
+++ b/test.html
@@ -74,7 +74,6 @@
                         document.querySelector(".inputD ata").value = event.target.textContent;
                         inputDiv.style.display = "none";
                     }
-
                 })
                 previousSearchContainer.addEventListener('click', function (event) {
                     if (!event.target.classList.contains('delete-search')) {
@@ -97,7 +96,6 @@
                         deleteSearch.style.display = "none";
                     }
                 }
-
                 deleteSearch.addEventListener('click', function () {
                     if (document.querySelector(".inputData").value === searchText.textContent) {
                         document.querySelector(".inputData").value = "";
@@ -105,17 +103,12 @@
                     previousSearchContainer.remove();
                     lastSearches.splice(i, 1);
                     localStorage.setItem('storageArray', JSON.stringify(lastSearches));
-
-
                 })
             };
-
         }
 
 
         function inputSearch() {
-            let list = document.querySelector(".inputSearchList");
-            list.style.display = "block";
             let inputData = document.querySelector(".inputData").value;
             //findWeatherData(inputData);
             let stored = localStorage.getItem('storageArray');
@@ -129,16 +122,14 @@
                 lastSearches.shift();
             }
             for (let i = 0; i < lastSearches.length; i++) {
-                if (document.querySelector(".inputData").value !== lastSearches[i]) {
+                if (inputData !== lastSearches[i]) {
                     //arr.push => arr.unshift
-                    lastSearches.unshift(document.querySelector(".inputData").value);
+                    lastSearches.unshift(inputData);
                     localStorage.setItem('storageArray', JSON.stringify(lastSearches));
                 } else {
-                    lastSearches = JSON.parse(stored);
+                    lastSearches = lastSearches;
                 }
             }
-
-
         }
 
         function bindEnterKey() {
