inputSearch function changes

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="todayWeather">
             <img id="weather-icon" src=" " alt="Weather icon">
             <div id="weather-description"></div>
-            <div class="todayTemperature">13 &#176;</div>
-            <div class="location">Telluride, CO, USA</div>
+            <div class="todayTemperature"> &#176;</div>
+            <div class="location"></div>
         </div>
         <div class="today-date-and-sunset-time">
             <div id="today-day"></div>
-            <div class="sunset-time">7.00 PM <br> Sunset time </div>
+            <div class="sunset-time"> <br> Sunset time </div>
         </div>
     </div>
     <div class="container">
@@ -42,7 +42,7 @@
                 </svg>
             </div>
             <div id="two">Humidity </div>
-            <div id="three">29%</div>
+            <div id="three"></div>
             <div id="four">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sunset"
                     viewBox="0 0 16 16">
@@ -51,7 +51,7 @@
                 </svg>
             </div>
             <div id="five">Sunset</div>
-            <div id="six">7:50 pm</div>
+            <div id="six"></div>
             <div id="seven">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wind"
                     viewBox="0 0 16 16">
@@ -61,7 +61,7 @@
             </div>
             <div id="line"></div>
             <div id="eight">Wind</div>
-            <div id="nine">0</div>
+            <div id="nine"></div>
             <div id="ten">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sunrise"
                     viewBox="0 0 16 16">
@@ -70,7 +70,7 @@
                 </svg>
             </div>
             <div id="eleven">Sunrise</div>
-            <div id="twelve">6:35 am</div>
+            <div id="twelve"></div>
         </div>
 
         <div class="max-min-temperature">
@@ -88,8 +88,8 @@
                 <path
                     d="M5.5 2.5a2.5 2.5 0 0 1 5 0v7.55a3.5 3.5 0 1 1-5 0V2.5zM8 1a1.5 1.5 0 0 0-1.5 1.5v7.987l-.167.15a2.5 2.5 0 1 0 3.333 0l-.166-.15V2.5A1.5 1.5 0 0 0 8 1z" />
             </svg>
-            <div id="max-temp-data">45mm</div>
-            <div id="min-temp-data">+17%</div>
+            <div id="max-temp-data"></div>
+            <div id="min-temp-data"></div>
         </div>
 
         <div class="forecast-container">
