--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -91,18 +89,13 @@
                 <div id="max-temp-data"></div>
                 <div id="min-temp-data"></div>
             </div>
-
             <div class="forecast-container">
-            
             </div>
-
-
-            <script src="script.js"></script>
-            <script src="input-search.js"></script>
-            <script src="change-size-style.js"></script>
         </div>
     </div>
-
+    <script src="script.js"></script>
+    <script src="input-search.js"></script>
+    <script src="change-size-style.js"></script>
 </body>
 
 </html>
